Fix vertical custom scrollbar height

--- a/website/public/css/lkb.scss
+++ b/website/public/css/lkb.scss
@@ -179,6 +179,10 @@ nav {
 	margin: 0;
 	padding: 0;
 }
+.simplebar-vertical {
+	height: 90vh;
+}
+
 
 #thumbs {
 	margin-bottom: 5vh;
